
    HDFS-2489. Move Finalize and Register to separate file out of
    DatanodeCommand.java. (suresh)

    HDFS-2488. Separate datatypes for InterDatanodeProtocol. (suresh)

    HDFS-2496. Separate datatypes for DatanodeProtocol. (suresh)

    HDFS-2479 HDFS Client Data Types in Protocol Buffers (sanjay)

    HDFS-2334. Add Closeable to JournalManager. (Ivan Kelly via jitendra)

  BUG FIXES
    HDFS-2287. TestParallelRead has a small off-by-one bug. (todd)

    HDFS-2299. TestOfflineEditsViewer is failing on trunk. (Uma Maheswara Rao G
               via atm)
    HDFS-2310. TestBackupNode fails since HADOOP-7524 went in.
               (Ivan Kelly via todd)

    HDFS-2313. Rat excludes has a typo for excluding editsStored files. (atm)

    HDFS-2314. MRV1 test compilation broken after HDFS-2197 (todd)

    HDFS-2330. In NNStorage and FSImagePreTransactionalStorageInspector,
    IOExceptions of stream closures can mask root exceptions. (Uma Maheswara
    Rao G via szetszwo)

    HDFS-46.   Change default namespace quota of root directory from
    Integer.MAX_VALUE to Long.MAX_VALUE. (Uma Maheswara Rao G via szetszwo)

    HDFS-2373. Commands using webhdfs and hftp print unnecessary debug 
    info on the console with security enabled. (Arpit Gupta via suresh)

    HDFS-2349. Corruption detected during block transfers between DNs
               should log a WARN instead of INFO. (harsh)

    HDFS-2188. Make FSEditLog create its journals from a list of URIs rather 
    than NNStorage. (Ivan Kelly via jitendra)

    HDFS-2481 Unknown protocol: org.apache.hadoop.hdfs.protocol.ClientProtocol.
    (sanjay)

    HDFS-2497 Fix TestBackupNode failure. (suresh)

    HDFS-2526. (Client)NamenodeProtocolTranslatorR23 do not need to keep a
               reference to rpcProxyWithoutRetry (atm)

    HDFS-2416. distcp with a webhdfs uri on a secure cluster fails. (jitendra)

Release 0.23.0 - 2011-11-01 

  INCOMPATIBLE CHANGES
